--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,81 @@ body {
 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#main h1{
+  color: rgb(60, 75, 75);
+}
+#main{
+  padding: 0px;
+  box-sizing: border-box;
+  width: 60%;
+  height: 100%;
+}
+
+
+#book-list{
+  padding: 0;
+}
+
+#book-list li{
+  display: inline-block;
+  margin:12px;
+  padding:10px;
+  border-radius: 4px;
+  border: 1px solid #880eaf;
+  box-shadow: 1px 2px 3px rgb(95, 157, 159);
+  cursor: pointer;
+  color:#880eaf
+}
+
+form{
+  background: rgba(255, 255, 255, 0.7);
+  padding: 20px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width:400px;
+}
+
+form field{
+  display: grid;
+  grid-auto-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+
+form label{
+  text-align: right;
+  padding: 6px;
+}
+
+form select, form input{
+  margin: 4px;
+  padding: 6px;
+  box-sizing: border-box;
+}
+
+form button{
+  font: 2em;
+  color: #fff;
+  background: #880eaf;
+  padding: 0 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  position: absolute;
+  bottom:10px;
+  left:10px ;
+}
+
+#book-details{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 40%;
+  height: 100%;
+  background: #880eaf;
+  padding: 30px;
+  overflow: auto;
+  box-shadow: -2px -3px 5px rgba(0, 0, 0, 0.2) ;
+  box-sizing: border-box;
+  color: #fff;
+
 }
